homeassistant/manifests/homeassistant-deployment-prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app: homeassistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homeassistant
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: homeassistant
        image: ghcr.io/home-assistant/home-assistant:stable
        imagePullPolicy: Always
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
              - NET_RAW
        resources:
          requests:
            cpu: "100m"
            memory: "1Gi"
          limits:
            cpu: "2000m"
            memory: "2Gi"
        volumeMounts:
        - name: homeassistant-config
          mountPath: /config
        ports:
        - name: http
          containerPort: 8123
          protocol: TCP
        - name: homekit
          containerPort: 21064
          protocol: TCP
        - name: mdns
          containerPort: 5353
          protocol: UDP
        readinessProbe:
          httpGet:
            path: /
            port: 8123
        livenessProbe:
          httpGet:
            path: /
            port: 8123
      volumes:
      - name: homeassistant-config
        hostPath:
          path: "/mnt/k3s-prod-data/homeassistant"

---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  selector:
    app: homeassistant
  type: ClusterIP
  ports:
  - name: http
    port: 8123
    targetPort: 8123
    protocol: TCP
  # - name: homekit
  #   port: 21064
  #   targetPort: 21064
  #   protocol: TCP

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: homeassistant-mdns
#   namespace: homeassistant
# spec:
#   selector:
#     app: homeassistant
#   type: ClusterIP
#   ports:
#   - name: mdns
#     port: 5353
#     targetPort: 5353
#     protocol: UDP

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-ingress
  namespace: homeassistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homeassistant-prod.goepp.net`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: homeassistant
          port: 8123
