homeassistant/manifests/homeassistant-lab.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant-lab

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant-lab
  namespace: homeassistant-lab
  labels:
    app: homeassistant-lab
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homeassistant-lab
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: homeassistant-lab
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: homeassistant-lab
        image: ghcr.io/home-assistant/home-assistant:stable
        imagePullPolicy: IfNotPresent
        securityContext:
          capabilities:
            add:
              - NET_ADMIN
              - NET_RAW
        resources:
          requests:
            cpu: "100m"
            memory: "1Gi"
          limits:
            cpu: "2000m"
            memory: "2Gi"
        volumeMounts:
        - name: homeassistant-config
          mountPath: /config
        ports:
        - name: http
          containerPort: 8123
          protocol: TCP
        - name: homekit
          containerPort: 21064
          protocol: TCP
        - name: mdns
          containerPort: 5353
          protocol: UDP
        readinessProbe:
          httpGet:
            path: /
            port: 8123
        livenessProbe:
          httpGet:
            path: /
            port: 8123
      volumes:
      - name: homeassistant-config
        hostPath:
          path: "/mnt/k3s-lab-data/homeassistant"

---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-lab
  namespace: homeassistant-lab
spec:
  selector:
    app: homeassistant-lab
  type: ClusterIP
  ports:
  - name: http
    port: 8123
    targetPort: 8123
    protocol: TCP

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-lab-ingress
  namespace: homeassistant-lab
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homeassistant-lab.goepp.net`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: homeassistant-lab
          port: 8123
