homeassistant/manifests/homeassistant-mudderpi.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app: homeassistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homeassistant
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - name: homeassistant
        image: ghcr.io/home-assistant/home-assistant:2026.10.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "100m"
            memory: "1Gi"
          limits:
            cpu: "2000m"
            memory: "2Gi"
        securityContext:
          privileged: true
        volumeMounts:
        - name: homeassistant-config
          mountPath: /config
        ports:
        - name: http
          containerPort: 8123
        readinessProbe:
          httpGet:
            path: /
            port: 8123
        livenessProbe:
          httpGet:
            path: /
            port: 8123
      volumes:
      - name: homeassistant-config
        hostPath:
          path: "/k3s/homeassistant/config"

---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  selector:
    app: homeassistant
  type: ClusterIP
  ports:
  - name: rpc
    port: 8123
    targetPort: 8123
    protocol: TCP

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-ingress
  namespace: homeassistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mudderpi-ha.goepp.net`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: homeassistant
          port: 8123
